<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/current_weather_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_16">

    <TextView
        android:id="@+id/current_weather_timezone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Europe/Lyon" />

    <TextView
        android:id="@+id/current_weather_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_timezone"
        tools:text="(45.25, 142.5)" />

    <TextView
        android:id="@+id/current_weather_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_coordinates"
        tools:text="18/03/2020 23:00:00" />

    <TextView
        android:id="@+id/current_weather_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_time"
        tools:text="clear" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/current_weather_icon_layout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_summary" />

    <TextView
        android:id="@+id/current_weather_precipIntensity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_icon_layout"
        tools:text="@string/current_weather_precipIntensity" />

    <TextView
        android:id="@+id/current_weather_precipProbability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_precipIntensity"
        tools:text="@string/current_weather_precipProbability" />

    <TextView
        android:id="@+id/current_weather_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_precipProbability"
        tools:text="@string/current_weather_temperature" />

    <TextView
        android:id="@+id/current_weather_apparentTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_temperature"
        tools:text="@string/current_weather_apparentTemperature" />

    <TextView
        android:id="@+id/current_weather_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_apparentTemperature"
        tools:text="@string/current_weather_humidity" />

    <TextView
        android:id="@+id/current_weather_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_humidity"
        tools:text="@string/current_weather_pressure" />

    <TextView
        android:id="@+id/current_weather_windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_pressure"
        tools:text="@string/current_weather_windSpeed" />

    <TextView
        android:id="@+id/current_weather_cloudCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_weather_windSpeed"
        tools:text="@string/current_weather_cloudCover" />

</androidx.constraintlayout.widget.ConstraintLayout>